Fix tags overflowing parents

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -106,7 +106,9 @@ h1
 
 .bootstrap-tagsinput
   min-width: 50%
-  text-align: left
+  text-align: left  
+  .tag
+    display: inline-block
 
 .label-info
   background:
